--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.4.0"
   },
   "devDependencies": {
