--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@milkdown/core": "^7.6.4",
+    "@milkdown/kit": "^7.6.4",
+    "@milkdown/plugin-listener": "^7.6.4",
+    "@milkdown/preset-commonmark": "^7.6.4",
+    "@milkdown/react": "^7.6.4",
+    "@milkdown/theme-nord": "^7.6.4",
     "@react-router/node": "^7.4.0",
     "@react-router/serve": "^7.4.0",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0",
     "react-router": "^7.4.0"
   },
   "devDependencies": {
